# src/main/java/com/camelcase/taskapi/model/ErrorResponse.java
@@ -1,0 +1,120 @@
+package com.camelcase.taskapi.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import org.springframework.lang.Nullable;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * ErrorResponse
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-03-10T18:22:10.574140745Z[Etc/UTC]", comments = "Generator version: 7.13.0-SNAPSHOT")
+public class ErrorResponse {
+
+  private @Nullable String error;
+
+  @Valid
+  private List<String> details = new ArrayList<>();
+
+  public ErrorResponse error(String error) {
+    this.error = error;
+    return this;
+  }
+
+  /**
+   * Error message describing the issue.
+   * @return error
+   */
+  
+  @Schema(name = "error", description = "Error message describing the issue.", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("error")
+  public String getError() {
+    return error;
+  }
+
+  public void setError(String error) {
+    this.error = error;
+  }
+
+  public ErrorResponse details(List<String> details) {
+    this.details = details;
+    return this;
+  }
+
+  public ErrorResponse addDetailsItem(String detailsItem) {
+    if (this.details == null) {
+      this.details = new ArrayList<>();
+    }
+    this.details.add(detailsItem);
+    return this;
+  }
+
+  /**
+   * Detailed validation errors, if applicable.
+   * @return details
+   */
+  
+  @Schema(name = "details", description = "Detailed validation errors, if applicable.", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("details")
+  public List<String> getDetails() {
+    return details;
+  }
+
+  public void setDetails(List<String> details) {
+    this.details = details;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    ErrorResponse errorResponse = (ErrorResponse) o;
+    return Objects.equals(this.error, errorResponse.error) &&
+        Objects.equals(this.details, errorResponse.details);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(error, details);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class ErrorResponse {\n");
+    sb.append("    error: ").append(toIndentedString(error)).append("\n");
+    sb.append("    details: ").append(toIndentedString(details)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
